Updated Log4J2 dependency to work with SLF4J 1.8.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>